--- a/customer.html
+++ b/customer.html
@@ -17,6 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
     <style>
+        body{
+            background-color: #0D1282;
+        }
         header {
             position: sticky;
             top: 0;
@@ -24,27 +27,29 @@
         /*navbar*/
         nav {
             position: relative;
-            border-bottom: 1px solid #E9B824;
+            border-bottom: 1px solid black;
+            background-color:#F0DE36
+
         }
         .nav-link {
             font-style: italic;
         }
         #btn-search {
-            border: 1px solid #E9B824;
-            color: #E9B824;
+            border: 1px solid white;
+            color: black;
         }
         #btn-search:hover {
-            background-color: #E9B824;
-            color: white;
+            background-color: #EF9595;
+            color: black;
         }
         #search-input {
-            border: 1px solid #E9B824;
+            border: 1px solid black;
         }
 
         /*table*/
         #table {
             margin: 20px 30px 0 30px;
-            border: 1px solid #E9B824;
+            border: 3px solid white;
         }
 
         /*button*/
@@ -58,18 +63,13 @@
             width: 20vw;
             margin: 0 4px;
             font-size: 1.2vw;
-            color: white;
-            font-weight: bold;
             font-family: 'Montserrat', sans-serif;
-            background-color: #E9B824;
-            border: 1px #E9B824;
-        }
-        #crudButtons>button:hover {
-            background-color: white;
-            border: 2px solid #E9B824;
-            color: #E9B824;
+            background-color: #EF9595;
+            border: 2px solid white;
+            color: black;
             font-weight: bold;
         }
+
         #shop-name {
             width: fit-content;
             height: fit-content;
@@ -77,7 +77,7 @@
         }
         #shop-name>span {
             font-size: 25px;
-            color: #E9B824;
+            color: black;
             font-weight: bold;
             font-style: italic;
         }
@@ -132,10 +132,10 @@
 
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/logo.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+                <img src="assets/download-removebg-preview.png" alt="Logo" width="50" class="d-inline-block align-text-top">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -170,7 +170,7 @@
 </header>
 <main>
     <section id="table">
-        <table class="table table-striped table-bordered caption-top">
+        <table class="table table-success table-striped">
             <thead>
             <tr>
                 <th scope="col">Customer_Id</th>
