--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
     <style>
+        body{
+            background-color: #0D1282;
+        }
         header {
             position: sticky;
             top: 0;
@@ -24,27 +27,28 @@
         /*navbar*/
         nav {
             position: relative;
-            border-bottom: 1px solid #E9B824;
+            border-bottom: 1px solid black;
+            background-color:#F0DE36
         }
         .nav-link {
             font-style: italic;
         }
         #btn-search {
-            border: 1px solid #E9B824;
-            color: #E9B824;
+            border: 1px solid white;
+            color: black;
         }
         #btn-search:hover {
-            background-color: #E9B824;
-            color: white;
+            background-color: #EF9595;
+            color: black;
         }
         #search-input {
-            border: 1px solid #E9B824;
+            border: 1px solid black;
         }
 
         /*table*/
         #table {
             margin: 20px 30px 0 30px;
-            border: 1px solid #E9B824;
+            border: 3px solid white;
         }
 
         /*crud buttons*/
@@ -58,17 +62,11 @@
             width: 20vw;
             margin: 0 4px;
             font-size: 1.2vw;
-            color: white;
+            color: black;
             font-weight: bold;
             font-family: 'Montserrat', sans-serif;
-            background-color: #E9B824;
-            border: 1px #E9B824;
-        }
-        #crudButtons>button:hover {
-            background-color: white;
-            border: 2px solid #E9B824;
-            color: #E9B824;
-            font-weight: bold;
+            background-color: #EF9595;
+            border: 2px solid white;
         }
         #shop-name {
             width: fit-content;
@@ -77,7 +75,7 @@
         }
         #shop-name>span {
             font-size: 25px;
-            color: #E9B824;
+            color: black;
             font-weight: bold;
             font-style: italic;
         }
@@ -134,10 +132,10 @@
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/logo.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+                <img src="assets/download-removebg-preview.png" alt="Logo" width="50" class="d-inline-block align-text-top">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,7 +144,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"id="shop-name">
-                        <span >GoodFood</span>
+                        <span >Dilshan Food Item</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="index.html">Item</a>
@@ -155,10 +153,10 @@
                         <a class="nav-link" href="customer.html">Customer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="place_order.html">Place Order</a>
+                        <a class="nav-link" href="place_order.html">Place_Order</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="order_detail.html">Order Details</a>
+                        <a class="nav-link" href="order_detail.html">Order_Details</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -172,13 +170,13 @@
 </header>
     <main>
         <section id="table">
-            <table class="table table-striped table-bordered caption-top">
+            <table class="table table-success table-striped">
                 <thead>
                 <tr>
-                    <th scope="col">Item Id</th>
-                    <th scope="col">Item Name</th>
+                    <th scope="col">Item_Id</th>
+                    <th scope="col">Item_Name</th>
                     <th scope="col">Price(1qty)</th>
-                    <th scope="col">QTY On Hand</th>
+                    <th scope="col">QTY_On_Hand</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -201,61 +199,43 @@
                     <td>@twitter</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">4</th>
                     <td>Larry</td>
                     <td>the Bird</td>
                     <td>@twitter</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">5</th>
                     <td>Larry</td>
                     <td>the Bird</td>
                     <td>@twitter</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">6</th>
                     <td>Larry</td>
                     <td>the Bird</td>
                     <td>@twitter</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">7</th>
                     <td>Larry</td>
                     <td>the Bird</td>
                     <td>@twitter</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">8</th>
                     <td>Larry</td>
                     <td>the Bird</td>
                     <td>@twitter</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">9</th>
                     <td>Larry</td>
                     <td>the Bird</td>
                     <td>@twitter</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">10</th>
                     <td>Larry</td>
                     <td>the Bird</td>
                     <td>@twitter</td>
