--- a/order_detail.html
+++ b/order_detail.html
@@ -17,6 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
     <style>
+        body{
+            background-color: #0D1282;
+        }
         header {
             position: sticky;
             top: 0;
@@ -24,27 +27,28 @@
         /*navbar*/
         nav {
             position: relative;
-            border-bottom: 1px solid #E9B824;
+            border-bottom: 1px solid black;
+            background-color:#F0DE36
         }
         .nav-link {
             font-style: italic;
         }
         #btn-search {
-            border: 1px solid #E9B824;
-            color: #E9B824;
+            border: 1px solid white;
+            color: black;
         }
         #btn-search:hover {
-            background-color: #E9B824;
-            color: white;
+            background-color: #EF9595;
+            color: black;
         }
         #search-input {
-            border: 1px solid #E9B824;
+            border: 1px solid black;
         }
 
         /*table*/
         #table {
             margin: 20px 30px 0 30px;
-            border: 1px solid #E9B824;
+            border: 3px solid white;
         }
 
         /*crud buttons*/
@@ -58,18 +62,13 @@
             width: 20vw;
             margin: 0 4px;
             font-size: 1.2vw;
-            color: white;
+            color: black;
             font-weight: bold;
             font-family: 'Montserrat', sans-serif;
-            background-color: #E9B824;
-            border: 1px #E9B824;
+            background-color: #EF9595;
+            border: 2px solid white;
         }
-        #crudButtons>button:hover {
-            background-color: white;
-            border: 2px solid #E9B824;
-            color: #E9B824;
-            font-weight: bold;
-        }
+
         #shop-name {
             width: fit-content;
             height: fit-content;
@@ -77,7 +76,7 @@
         }
         #shop-name>span {
             font-size: 25px;
-            color: #E9B824;
+            color: black;
             font-weight: bold;
             font-style: italic;
         }
@@ -129,10 +128,10 @@
 
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/logo.png" alt="Logo" width="50" class="d-inline-block align-text-top">
+                <img src="assets/download-removebg-preview.png" alt="Logo" width="50" class="d-inline-block align-text-top">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -141,7 +140,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"id="shop-name">
-                        <span >GoodFood</span>
+                        <span >Dilshan Food Item</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="index.html">Item</a>
@@ -150,10 +149,10 @@
                         <a class="nav-link" href="customer.html">Customer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="place_order.html">Place Order</a>
+                        <a class="nav-link" href="place_order.html">Place_Order</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="order_detail.html">Order Details</a>
+                        <a class="nav-link" href="order_detail.html">Order_Details</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -167,12 +166,12 @@
 </header>
 <main>
     <section id="table">
-        <table class="table table-striped table-bordered caption-top">
+        <table class="table table-success table-striped">
             <thead>
             <tr>
                 <th scope="col">Date</th>
-                <th scope="col">Customer Id</th>
-                <th scope="col">Order Id</th>
+                <th scope="col">Customer_Id</th>
+                <th scope="col">Order_Id</th>
             </tr>
             </thead>
             <tbody>
@@ -182,62 +181,47 @@
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>2</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>3</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>4</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>5</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>6</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>7</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>8</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
+                <td>9</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>Mark</td>
-                <td>Otto</td>
-            </tr>
-            <tr>
-                <td>1</td>
+                <td>10</td>
                 <td>Mark</td>
                 <td>Otto</td>
             </tr>
@@ -249,8 +233,8 @@
 
     <section id="crudButtons" class="text-center">
         <button type="button" class="btn btn-warning btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModalUpdate">Update</button>
-        <button type="button" class="btn btn-warning btn-lg">Delete Order</button>
-        <button type="button" class="btn btn-warning btn-lg">See All</button>
+        <button type="button" class="btn btn-warning btn-lg">Delete_Order</button>
+        <button type="button" class="btn btn-warning btn-lg">See_All</button>
     </section>
 
     <!-- Modal -->
@@ -258,15 +242,15 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header" id="modal-header-update">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel-update">ITEM UPDATE</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel-update">ITEM_UPDATE</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="modal-body-update">
                     <label for="date">date :</label> <br>
                     <input type="text" id="date"> <br>
-                    <label for="customer-id">customer id :</label> <br>
+                    <label for="customer-id">customer_id :</label> <br>
                     <input type="text" id="customer-id"> <br>
-                    <label for="order-id">order id :</label> <br>
+                    <label for="order-id">order_id :</label> <br>
                     <input type="text" id="order-id"><br>
                 </div>
                 <div class="modal-footer">
